issue in Chrome using overflow clip margin

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -46,7 +46,7 @@
     object-fit: cover;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
     margin-left: 270px;
-    overflow-clip-margin: unset;
+    /* overflow-clip-margin: unset; */
 }
 
 .infos {
@@ -234,7 +234,7 @@
     display: flex;
     height: 300px;
     width: 350px;
-    overflow-clip-margin: unset;
+    /* overflow-clip-margin: unset; */
     border-radius: 5px;
     object-fit: cover;
     object-position: 50% 20%;
