--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,8 @@ ul, li {
     border-radius: 50%;
     object-fit: cover;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
-    overflow-clip-margin: unset;
+    image-rendering: auto;
+    /* overflow-clip-margin: unset; */
 }
 
 .photographer_section article .details {
